--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,19 @@
-streamlit==1.22.0
-torch==2.0.0
-diffusers==0.18.0
-transformers==4.28.1
-accelerate==0.18.0
+streamlit
+transformers==4.46.2
+diffusers
+accelerate
+numpy==1.24.4
+audio-recorder-streamlit
+ffmpeg-python
+edge-tts
+langchain
+langchain_ollama
+beautifulsoup4
+Pillow
+aiohttp
+duckduckgo-search
+mysql-connector-python
+python-dotenv
+plotly
+pandas
+langchain_google_community
