--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,49 @@
-version: '3'
 services:
   streamlit:
     build: .
     ports:
       - "8501:8501"
+    volumes:
+      - ~/.cache/huggingface:/root/.cache/huggingface
+      - ./app:/app/
+    working_dir: /app
+    env_file:
+      - .env
+    environment:
+      - NVIDIA_VISIBLE_DEVICES=all
+      - PYTORCH_CUDA_ALLOC_CONF=max_split_size_mb:128,garbage_collection_threshold:0.8
+      - DB_HOST=db
+      - DB_USER=user
+      - DB_PASSWORD=password
+      - DB_NAME=english_learning
+      - TZ=Asia/Tokyo
+    tty: true
     deploy:
       resources:
         reservations:
           devices:
-            - capabilities: [gpu]
+            - driver: nvidia
+              count: 2
+              capabilities: [gpu]
+    runtime: nvidia
+    depends_on:
+      - db
+
+  db:
+    image: mysql:8.0
+    ports:
+      - "3306:3306"
+    environment:
+      - MYSQL_ROOT_PASSWORD=rootpassword
+      - MYSQL_DATABASE=english_learning
+      - MYSQL_USER=user
+      - MYSQL_PASSWORD=password
     volumes:
-      - ~/.cache/huggingface:/root/.cache/huggingface
+      #ローカル保存
+      #- ./mysql_data:/var/lib/mysql
+      #docker保存
+      - mysql_data:/var/lib/mysql
+    restart: unless-stopped
+
+volumes:
+  mysql_data:  
